--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,37 @@ padding: 10 5;
 margin: 10 5;
 
 }
-span {
+b {
   text-decoration: underline yellow;
+}
 
+main {
+  margin: auto;
+  width: 760px;
+
+}
+
+.image img{
+width: inherit;
+
+}
+
+.image {
+  width:230px;
+  margin:10px;
+  display: inline-block;
+}
+
+.edit {
+  background-color: yellow;
+  text-align: center;
+
+}
+
+
+.copyright {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: auto 20;
 }
